[package]
name = "demo"
version = "0.0.1"
authors = ["doylecnn"]
links = "CQP"
build = "build.rs"

[dependencies.cqpsdk]
git = "https://github.com/doylecnn/cqpsdk-rust"

[dependencies]
byteorder="1"
encoding = "0.2"
lazy_static="*"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
base64 = "~0.6.0"

[lib]
name = "app"
crate-type = [ "cdylib" ]